# lore-editor

./: .gitignore  .lore-project  README.md  lore-editor.meta.json  pyproject.toml  run_lore_editor.py
docs/: SLOWNIK_I_PISOWNIA.md
lore/: __init__.py  astraedit_bridge.py  astraedit_loader.py  backend.py  cynober_patch.py  dictionary_view.py  document_hooks.py  editor_window.py  export_docx.py  graph_view.py  help_topics.py  help_view.py  history.py  history_view.py  lifecycle.py  manuscript.py  panel.py  paths.py  print_preview.py  query.py  spellcheck.py  store.py  team_sync.py  temporal.py  text_io.py  theme.py  transaction.py  types.py  typography.py
lore/data/sjp/: NOTICE.txt  README_pl_PL.txt
scripts/: build_nuitka.ps1  install_fonts.ps1  install_standalone.ps1  install_writer.ps1
scripts/dev/: README.md  audit_current.py  audit_deep.py  audit_meta.py  audit_queries.py  inspect_shards.py  read_shard_kafd.py  recover_karmazyn_lua_final.py  repro_persist.py  repro_save_load.py  repro_two_docs.py  repro_typ_bug.py  simulate_fresh.py  test_crud.py  test_cynober_connection.py  test_team_replicate.py
shards/lore-editor/: index.json
tests/: test_astraedit_bridge.py  test_discover.py  test_editor_window.py  test_help.py  test_history.py  test_lore_store.py  test_manuscript.py  test_panel.py  test_paths.py  test_spellcheck.py  test_store_refresh.py  test_temporal_query.py  test_text_io.py  test_typography.py
