[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-editor"
version = "0.7.3"
description = "Edytor lore dla pisarzy — kontekst czasowy, historia zmian, zapytania semantyczne"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Maciej Mazur" }]
dependencies = [
    "cynober-db>=8.0.1",
    "python-docx>=1.1.0",
]

[project.scripts]
lore-editor = "run_lore_editor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lore*"]

[tool.setuptools]
py-modules = ["run_lore_editor"]